refactor: AlarmService의 connectToAlarm() 메서드를 세부 로직별로 쪼개서 메서드로 추출